# jpg2ascii

./: .gitignore  Cargo.toml  DEVELOP.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  build.sh  test.sh
.github/workflows/: ci.yml  release.yml
benches/: convert_bench.rs
examples/: basic.rs
src/: lib.rs  main.rs
tests/: ascii_snapshot.rs
